# cuda_mandelbrot

./: .gitignore  .pre-commit-config.yaml  README.md
mandelbrot_lib/: .flake8  pyproject.toml
mandelbrot_lib/mandelbrot_lib/: __init__.py  settings.py
mandelbrot_lib/mandelbrot_lib/algorithms/: __init__.py  _base.py  cuda.cu  naive_sequential.py  numba_cuda.py  numpy_grid.py
mandelbrot_lib/mandelbrot_lib/cpp_mandelbrot/: CMakeCache.txt  CMakeLists.txt  cpp_algo.cpp  cpp_algo.h  module.cpp
mandelbrot_lib/mandelbrot_lib/cuda_mandelbrot/: CMakeLists.txt  cuda.cu
mandelbrot_lib/tests/: test_base.py  test_naive_sequential.py  test_numpy_grid.py
notebooks/: Mandelbrot-3.ipynb  print_fractal.ipynb
src/: CMakeLists.txt  base_cuda.cu  gpu_library.cu  mandelbrot.cpp  mandelbrot_cuda.cu  mandelbrot_cuda_fast.cu  mandelbrot_cuda_faster.cu  mandelbrot_pybind.cpp  mandelbrot_unrolled.cu  manual_unroll.cu  multithread.cpp  n_unroll.cu  polynomial_unroll.cu  pybind.cpp
