[tool.poetry]
name = "mandelbrot-lib"
version = "0.1.0"
description = ""
authors = ["Thomas Kientz <thomas@kientz.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
